<resources>
    <string name="app_name">Meditation Journal</string>
    <string name="min_5" translatable="true">5 minutes</string>
    <string name="min_10" translatable="true">10 minutes</string>
    <string name="min_15" translatable="true">15 minutes</string>
    <string name="min_20" translatable="true">20 minutes</string>
    <string name="min_30" translatable="true">30 minutes</string>
    <string name="min_45" translatable="true">45 minutes</string>
    <string name="min_5_value" translatable="false">5</string>
    <string name="min_10_value" translatable="false">10</string>
    <string name="min_15_value" translatable="false">15</string>
    <string name="min_20_value" translatable="false">20</string>
    <string name="min_30_value" translatable="false">30</string>
    <string name="min_45_value" translatable="false">45</string>
    <string name="sound_callback" translatable="false">Sound</string>
    <string name="video_callback" translatable="false">Meditation Video</string>
    <string name="sound_value_callback" translatable="true">Sound</string>
    <string name="video_value_callback" translatable="true">Meditation Video</string>
    <string name="a_tone" translatable="true">A Tone</string>
    <string name="computer_magic" translatable="true">Computer Magic</string>
    <string name="metal_gong" translatable="true">Gong</string>
    <string name="temple_bell" translatable="true">Temple Bell</string>
    <string name="a_tone_value" translatable="false">a_tone</string>
    <string name="computer_magic_value" translatable="false">computer_Magic</string>
    <string name="metal_gong_value" translatable="false">metal_gong</string>
    <string name="temple_bell_value" translatable="false">temple_bell</string>
    <string name="settings_callback_needs_upgrade" translatable="true">Callback by sound. To switch to the video option, please select \"Upgrade\" from the menu when viewing your overview, or become a student</string>
    <string name="pref_med_time_title" translatable="true">Meditation Time</string>
    <string name="pref_time_title" translatable="true">Time of Day</string>
    <string name="pref_tone_title" translatable="true">Audio from your device</string>
    <string name="pref_med_reminder_title" translatable="true">Meditation Reminder</string>
    <string name="pref_title_vibrate" translatable="true">Add vibration to callback</string>
    <string name="pref_key_med_time" translatable="false">Meditation Time</string>
    <string name="pref_key_callback" translatable="false">callback type</string>
    <string name="pref_key_sounds" translatable="false">callback sound</string>
    <string name="pref_key_ringtone" translatable="false">ringtone</string>
    <string name="pref_key_tone" translatable="false">audio from device</string>
    <string name="pref_med_reminder_key" translatable="false">meditation reminder</string>
    <string name="pref_key_reminder_time" translatable="false">timeInMinutes</string>
    <string name="pref_key_vibrate" translatable="false">vibrate at callback</string>
    <string name="pref_default_reminder_time" translatable="false">12:00 pm</string>
    <string name="pref_reminder_on" translatable="true">Reminder enabled</string>
    <string name="pref_reminder_off" translatable="true">Reminder disabled</string>
    <string name="pref_sum_off_vibrate" translatable="true">don\'t vibrate</string>
    <string name="pref_sum_on_vibrate" translatable="true">vibrate</string>
    <string name="ok" translatable="true">OK</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="ringtoneTitle">Ringtone</string>
    <string name="ringtoneSummary">Ringtone: %s</string>
    <string name="menu_title_settings" translatable="true">Settings</string>
    <string name="menu_guidelines" translatable="true">Guidelines</string>
    <string name="menu_information" translatable="true">C.MI. Information</string>
    <string name="menu_activation" translatable="true">Enter Student Code</string>
    <string name="menu_upgrade" translatable="true">Upgrade $</string>
    <string name="activation_text" translatable="true">This journal for your meditation practice is developed based on the guidelines of the C.MI. course*. However it can be used by anyone who to keep track of their practice.\n\nIf you are a C.MI. student press the \"C.MI. Student\" button and enter your activation code. Otherwise press the \"free use\" button to continue.</string>
    <string name="activation_student_bt" translatable="true">C.MI. Student</string>
    <string name="activation_free_bt" translatable="true">Free use</string>
    <string name="toast_successful_student_activation" translatable="true">Student features are now unlocked</string>
    <string name="toast_faulty_student_authentication" translatable="true">The authentication key does not match</string>
    <string name="main_entry_bt" translatable="true">Add new Journal Entry</string>
    <string name="main_journal_bt" translatable="true">View Journal</string>
    <string name="app_logo_contentDescrip" translatable="true">App logo</string>
    <string name="preparation_instruction" translatable="true">Take your time to setup and prepare.\n\nOnce you are ready, click on \"start meditation\".</string>
    <string name="preparation_start_bt" translatable="true">Start Meditation</string>
    <string name="category_date" translatable="true">Date:</string>
    <string name="review_preparation_time" translatable="true">Preparation Time:</string>
    <string name="review_meditation_time" translatable="true">meditation time</string>
    <string name="review_prep_label" translatable="true">Preparation time:</string>
    <string name="review_med_label" translatable="true">Meditation time:</string>
    <string name="review_assessment_label" translatable="true">Self-assessment:</string>
    <string name="review_assessment_hint" translatable="true">Write your self-assessment …</string>
    <string name="meditation_test" translatable="false">kyWeRdcGzKA</string>
    <string name="meditation_5min" translatable="false">gJ5LtUsHXt4</string>
    <string name="meditation_10min" translatable="false">4hXYRXaJdtk</string>
    <string name="meditation_15min" translatable="false">7RDoi3RyIFg</string>
    <string name="meditation_20min" translatable="false">_wxQGO_Pw-w</string>
    <string name="meditation_30min" translatable="false">8K6acvCdQqU</string>
    <string name="meditation_45min" translatable="false">unq70DyzeZI</string>
    <string name="export_journal_bt" translatable="true">Export Journal</string>
    <string name="journal_total_label" translatable="true">Total:</string>
    <string name="journal_review_time" translatable="true">Review Time:</string>
    <string name="journal_session_label" translatable="true">Session:</string>
    <string name="journal_date_label" translatable="true">Date:</string>
    <string name="journal_prep_label" translatable="true">Prep:</string>
    <string name="journal_med_label" translatable="true">Med:</string>
    <string name="journal_rev_label" translatable="true">Rev:</string>
    <string name="overview_no_entries" translatable="true">You have not written any journal entries so far.\nStart by tapping \"Add new journal entry \".</string>
    <string name="review_toast_part_I" translatable="true">As per the C.MI. regulations only a maximum of</string>
    <string name="review_toast_part_II_prep" translatable="true">mins can be logged. Hence the preparation time has been adjusted accordingly.</string>
    <string name="review_toast_part_II_review" translatable="true">mins can be logged. Hence the review time has been adjusted accordingly.</string>
    <string name="storage_permission_request" translatable="true">Please give the app external storage permission and try again.</string>
    <string name="medJour_directory_name" translatable="false">meditationJournal</string>
    <string name="pref_save" translatable="true">save</string>
    <string name="pref_edit" translatable="true">edit</string>
    <string name="pref_delete" translatable="true">delete</string>
    <string name="pref_leave_edit_options" translatable="true">leave edit options</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
</resources>