<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/main_cumulative_tv"
            style="@style/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/std_space"
            android:layout_marginStart="@dimen/std_space"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="Cumulative Time: 8h 30 min" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="256dp" />

        <Button
            android:id="@+id/main_entry_bt"
            style="@style/bgColor_bt"
            android:layout_marginBottom="@dimen/std_space"
            android:layout_marginTop="@dimen/half_space"
            android:text="@string/main_entry_bt"
            app:layout_constraintBottom_toTopOf="@+id/main_journal_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/main_journal_bt"
            style="@style/bgColor_bt"
            android:layout_marginBottom="8dp"
            android:text="@string/main_journal_bt"
            app:layout_constraintBottom_toTopOf="@+id/main_adView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_entry_bt" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/main_adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_logo_contentDescrip"
            android:src="@drawable/ic_launcher_foreground"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/main_cumulative_tv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />
    </android.support.constraint.ConstraintLayout>
</layout>