<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_space"
    android:background="@android:color/white"
    android:theme="@style/EntryTheme">

    <TextView
        android:id="@+id/rv_total_label"
        style="@style/label.print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/half_space"
        android:layout_marginStart="@dimen/half_space"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/rv_total_tv"
        android:text="@string/journal_session_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rv_total_tv"
        style="@style/text.print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/half_space"
        android:layout_marginStart="@dimen/half_space"
        app:layout_constraintBottom_toBottomOf="@+id/rv_total_label"
        app:layout_constraintStart_toEndOf="@+id/rv_total_label"
        app:layout_constraintTop_toTopOf="@+id/rv_total_label"
        tools:text="35 min" />

    <TextView
        android:id="@+id/rv_date_label"
        style="@style/label.print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/std_space"
        android:layout_marginRight="@dimen/std_space"
        android:labelFor="@+id/rv_date_tv"
        android:text="@string/journal_date_label"
        app:layout_constraintBottom_toBottomOf="@+id/rv_total_label"
        app:layout_constraintEnd_toStartOf="@+id/rv_date_tv"
        app:layout_constraintTop_toTopOf="@+id/rv_total_label" />

    <TextView
        android:id="@+id/rv_date_tv"
        style="@style/text.print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/std_space"
        android:layout_marginRight="@dimen/std_space"
        app:layout_constraintBottom_toBottomOf="@+id/rv_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_date_label"
        tools:text="01/01/2018" />

    <TextView
        android:id="@+id/rv_prep_label"
        style="@style/label.print"
        android:layout_marginTop="@dimen/half_space"
        android:labelFor="@+id/rv_prep_tv"
        android:text="@string/journal_prep_label"
        app:layout_constraintStart_toStartOf="@+id/rv_total_label"
        app:layout_constraintTop_toBottomOf="@+id/rv_total_label" />

    <TextView
        android:id="@+id/rv_prep_tv"
        style="@style/text.print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/half_space"
        android:layout_marginStart="@dimen/half_space"
        app:layout_constraintBottom_toBottomOf="@+id/rv_prep_label"
        app:layout_constraintStart_toEndOf="@+id/rv_prep_label"
        app:layout_constraintTop_toTopOf="@+id/rv_prep_label"
        tools:text="5 min" />

    <TextView
        android:id="@+id/rv_med_label"
        style="@style/label.print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space"
        android:labelFor="@+id/rv_med_tv"
        android:text="@string/journal_med_label"
        app:layout_constraintBottom_toTopOf="@+id/rv_review_label"
        app:layout_constraintStart_toStartOf="@+id/rv_prep_label"
        app:layout_constraintTop_toBottomOf="@+id/rv_prep_label" />

    <TextView
        android:id="@+id/rv_med_tv"
        style="@style/text.print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/half_space"
        android:layout_marginStart="@dimen/half_space"
        app:layout_constraintBottom_toBottomOf="@+id/rv_med_label"
        app:layout_constraintStart_toEndOf="@+id/rv_med_label"
        app:layout_constraintTop_toTopOf="@+id/rv_med_label"
        tools:text="20 min" />

    <TextView
        android:id="@+id/rv_review_label"
        style="@style/label.print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/std_space"
        android:layout_marginTop="@dimen/std_space"
        android:labelFor="@+id/rv_review_tv"
        android:text="@string/journal_rev_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rv_med_label"
        app:layout_constraintTop_toBottomOf="@+id/rv_med_label" />

    <TextView
        android:id="@+id/rv_review_tv"
        style="@style/text.print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/half_space"
        android:layout_marginStart="@dimen/half_space"
        app:layout_constraintBottom_toBottomOf="@+id/rv_review_label"
        app:layout_constraintStart_toEndOf="@+id/rv_review_label"
        app:layout_constraintTop_toTopOf="@+id/rv_review_label"
        tools:text="10 min" />

    <TextView
        android:id="@+id/rv_assessment_tv"
        style="@style/text.print"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/border_margin"
        android:layout_marginEnd="@dimen/border_margin"
        android:layout_marginLeft="@dimen/half_space"
        android:layout_marginRight="@dimen/border_margin"
        android:layout_marginStart="@dimen/half_space"
        android:layout_marginTop="@dimen/half_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rv_med_tv"
        app:layout_constraintTop_toBottomOf="@+id/rv_date_tv"
        tools:text="Extract of the review written by the user. The user can tap on the entry to read it in full and/or edit." />
</android.support.constraint.ConstraintLayout>