<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_space"
    android:animateLayoutChanges="true"
    android:id="@+id/rv_holder"
    card_view:cardBackgroundColor="@color/colorPrimaryDark"
    card_view:cardCornerRadius="@dimen/corner_radius">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rv_total_label"
            style="@style/label.accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_space"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/rv_total_tv"
            android:text="@string/journal_session_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rv_total_tv"
            style="@style/text.accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_space"
            app:layout_constraintBottom_toBottomOf="@+id/rv_total_label"
            app:layout_constraintStart_toEndOf="@+id/rv_total_label"
            app:layout_constraintTop_toTopOf="@+id/rv_total_label"
            tools:text="35 min" />

        <TextView
            android:id="@+id/rv_date_label"
            style="@style/label.accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/std_space"
            android:labelFor="@+id/rv_date_tv"
            android:text="@string/journal_date_label"
            app:layout_constraintBottom_toBottomOf="@+id/rv_total_label"
            app:layout_constraintEnd_toStartOf="@+id/rv_date_tv"
            app:layout_constraintTop_toTopOf="@+id/rv_total_label" />

        <TextView
            android:id="@+id/rv_date_tv"
            style="@style/text.accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/std_space"
            app:layout_constraintBottom_toBottomOf="@+id/rv_date_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rv_date_label"
            tools:text="01/01/2018" />

        <TextView
            android:id="@+id/rv_prep_label"
            style="@style/label"
            android:layout_marginTop="@dimen/half_space"
            android:labelFor="@+id/rv_prep_tv"
            android:text="@string/journal_prep_label"
            app:layout_constraintStart_toStartOf="@+id/rv_total_label"
            app:layout_constraintTop_toBottomOf="@+id/rv_total_label" />

        <TextView
            android:id="@+id/rv_prep_tv"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_space"
            app:layout_constraintBottom_toBottomOf="@+id/rv_prep_label"
            app:layout_constraintStart_toEndOf="@+id/rv_prep_label"
            app:layout_constraintTop_toTopOf="@+id/rv_prep_label"
            tools:text="5 min" />

        <TextView
            android:id="@+id/rv_med_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_space"
            android:labelFor="@+id/rv_med_tv"
            android:text="@string/journal_med_label"
            app:layout_constraintBottom_toTopOf="@+id/rv_review_label"
            app:layout_constraintStart_toStartOf="@+id/rv_prep_label"
            app:layout_constraintTop_toBottomOf="@+id/rv_prep_label" />

        <TextView
            android:id="@+id/rv_med_tv"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_space"
            app:layout_constraintBottom_toBottomOf="@+id/rv_med_label"
            app:layout_constraintStart_toEndOf="@+id/rv_med_label"
            app:layout_constraintTop_toTopOf="@+id/rv_med_label"
            tools:text="20 min" />

        <TextView
            android:id="@+id/rv_review_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_space"
            android:layout_marginTop="@dimen/std_space"
            android:labelFor="@+id/rv_review_tv"
            android:text="@string/journal_rev_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/rv_med_label"
            app:layout_constraintTop_toBottomOf="@+id/rv_med_label" />

        <TextView
            android:id="@+id/rv_review_tv"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_space"
            app:layout_constraintBottom_toBottomOf="@+id/rv_review_label"
            app:layout_constraintStart_toEndOf="@+id/rv_review_label"
            app:layout_constraintTop_toTopOf="@+id/rv_review_label"
            tools:text="10 min" />

        <TextView
            android:id="@+id/rv_assessment_tv"
            style="@style/entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border_margin"
            android:layout_marginEnd="@dimen/border_margin"
            android:layout_marginStart="@dimen/half_space"
            android:layout_marginTop="@dimen/half_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rv_med_tv"
            app:layout_constraintTop_toBottomOf="@+id/rv_date_tv"
            tools:text="Extract of the review written by the user. The user can tap on the entry to read it in full and/or edit." />

        <EditText
            android:id="@+id/rv_assessment_et"
            style="@style/entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:inputType="textMultiLine"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/rv_assessment_tv"
            app:layout_constraintEnd_toEndOf="@id/rv_assessment_tv"
            app:layout_constraintStart_toStartOf="@id/rv_assessment_tv"
            app:layout_constraintTop_toTopOf="@id/rv_assessment_tv"
            tools:ignore="LabelFor"
            tools:text="Extract of the review written by the user. The user can tap on the entry to read it in full and/or edit." /> <!-- there is no label at all -->

        <TextView
            android:id="@+id/focus_grabber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>